--- a/coverageReport/com.tomgregory/GradleTutorial.java.html
+++ b/coverageReport/com.tomgregory/GradleTutorial.java.html
@@ -2,7 +2,7 @@
 
 <span class="nc" id="L3">public class GradleTutorial {</span>
     public static void main(String[] args) {
-<span class="fc" id="L5">        System.out.println(&quot;Gradle 4tw!&quot;);</span>
-<span class="fc" id="L6">    }</span>
+<span class="nc" id="L5">        System.out.println(&quot;Gradle 4tw!&quot;);</span>
+<span class="nc" id="L6">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.11.202310140853</span></div></body></html>
